--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22'
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22'
     // para usar Anko
     compile "org.jetbrains.anko:anko:$anko_version"
 }
